# dpMMlowVar

./: .gitignore  CMakeLists.txt  Makefile  README.md  dpMMlowVar.cfg  package.xml
cmake/: FindEigen3.cmake
cuda/: choiceMult_kernel.cu  copy_kernel.cu  cuda_global.h  ddpLabelsSpecial_kernel.cu  ddpLabels_kernel.cu  ddpvMFlabelsSpecial_kernel.cu  ddpvMFlabels_kernel.cu  dpLabels_kernel.cu  dpmeans_pyramid_kernel.cu  dpvMFlabels_kernel.cu  kmeansLabels_kernel.cu  labelMap_kernel.cu  spkmLabels_kernel.cu  vectorSum_kernel.cu
cuda/deprecated/: copy_kernel.cu  labelMap_kernel.cu  vectorSum_kernel.cu
data/: rndSphereDataIwUncertain.csv
include/: SO3.hpp  cat.hpp  clData.hpp  clDataGpu.hpp  clusterer.hpp  ddpmeans.hpp  ddpmeansCUDA.hpp  ddpmeansCUDAnew.hpp  ddpvMFmeans.hpp  ddpvMFmeansCUDA.hpp  dir.hpp  distribution.hpp  dpmeans.hpp  euclideanData.hpp  global.hpp  gpuMatrix.hpp  kmeans.hpp  kmeansCUDA.hpp  manifold.hpp  normal.hpp  sampler.hpp  sphere.hpp  sphere_impl.hpp  sphericalData.hpp  spkm.hpp
include/deprecated/: cuda_global.h  ddpvMFmeans.hpp  ddpvMFmeansCUDA.hpp  distribution.hpp  sphere.hpp  sphere_impl.hpp  spkm.hpp
include/dpMMlowVar/: SO3.hpp  clData.hpp  clDataGpu.hpp  clusterer.hpp  cuda_global.h  ddpmeans.hpp  ddpmeansCUDA.hpp  ddpmeansCUDAnew.hpp  ddpvMF_cuda_helper.h  ddpvMFmeansCUDA.hpp  distribution.hpp  dpmeans.hpp  dpmeansCUDA.hpp  dpmeans_simple.hpp  euclideanData.hpp  global.hpp  gpuMatrix.hpp  helper_cuda.h  kmeans.hpp  kmeansCUDA.hpp  opencvHelper.hpp  random.hpp  sphericalData.hpp  timer.hpp
include/jsCore/: clData.hpp  clDataGpu.hpp  gpuMatrix.hpp  timer.hpp
include/nvidia/: helper_cuda.h
matlab/: README.txt  estimate_normals.m
matlab/al_manifold/: Dcw.m  Dcx.m  Dcy.m  Dcz.m  Dmw.m  Dmx.m  Dmy.m  Dmz.m  Dpw.m  Dpx.m  Dpy.m  Dpz.m  Dxx.m  Dyy.m  al_s2.m  compute_normals_from_file.m  imfiltermtx.m  incorporate_defaults.m  project_onto_s2.m
matlab/mex/: README.md  ddp_demo.m  dpmm_demo.m  make.m  mex_ddp.cpp  mex_dpmm.cpp
matlab/nyu2/: collectMats.m  dumpNYU2.m  evalMMFmats.m  fixMats.m  showMMF_pub.m  showMMFmats.m
python/: buffered.py  config.py  dpMeans.py  dpMeansWeighted.py  dpView.py  dpvMFmeans.py  evalCompareMethodsOnNYU2.py  evalFindNYUexamples.py  evalLowVarSphereMMsynthetic.py  plots.py  pyplot.py  reNameFiles.py  rgbdframe.py  runEval.sh  runs.sh  sphere.py  testPyramidDPmeans.py
src/: cat.cpp  cudaClusterNode.cpp  ddpImageCluster.cpp  ddpImageClusterOld.cpp  ddpPosterize.cpp  ddpSphereCluster.cpp  dir.cpp  dpMMlowVarCluster.cpp  normal.cpp  sampler.cpp  sphere.cpp
test/: SO3.cpp  kmeans.cpp  spkm.cpp  spkmCUDA.cpp
